--- a/notebooks/Class.ipynb
+++ b/notebooks/Class.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 163,
    "metadata": {
     "executionInfo": {
      "elapsed": 42,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 164,
    "metadata": {
     "id": "9ppWH1oJnAxE",
     "outputId": "d4e4be51-844b-4c2f-aa10-0aa0f767d0e3"
@@ -71,7 +71,7 @@
        "4"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 165,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -129,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 166,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 167,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 168,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "True"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,8 +519,8 @@
     "library.add_book(\"Tomodachi Game\", \"Mikoto Yamaguchi\", 3, \"Yuuichi and his friends are thrown into a mysterious game that tests the strength of their bonds through deception, betrayal, and money.\")\n",
     "library.add_book(\"Summer Time Rendering\", \"Yasuki Tanaka\", 4, \"Shinpei returns to his island hometown for a friend’s funeral, only to discover dark forces at play and a time loop that could change everything.\")\n",
     "library.add_book(\"Go-Toubun no Hanayome\", \"Negi Haruba\", 6, \"Fuutarou, a top student, becomes the private tutor of five wealthy quintuplets who all hate studying — and might just fall in love with him.\")\n",
-    "\n",
-    "\n",
+    "library.add_book(\"Ao Ashi\", \"Yugo Kobayashi\", 10, \"Ashito Aoi, a young football player, dreams of becoming a professional player and joins a prestigious youth team.\")\n",
+    "library.add_book(\"Yofukashi no Uta\", \"Kotoyama\", 7, \"Kou, a sleepless teenager, wanders the city at night and meets Nazuna, a mysterious vampire girl — leading him into a nocturnal world of freedom, desire, and the allure of the night.\")\n",
     "\n",
     "print(library.search_books(\"Makeine\"))\n",
     "print(library.search_books(\"Re:Zero\"))\n",
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "        <style>\n",
        "            .book-wrapper {\n",
        "                display: inline-block;\n",
-       "                margin: 15px;\n",
+       "                margin: 10px;\n",
        "                vertical-align: top;\n",
        "            }\n",
        "\n",
@@ -647,7 +647,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>4 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -699,7 +699,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>0 Copy</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -751,7 +751,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>2 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -803,7 +803,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>3 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -855,7 +855,7 @@
        "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
        "                                    <strong>6 Copies</strong>\n",
        "                                </p>\n",
-       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%;\">     \n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
        "                                    <strong>Click to see more</strong>\n",
        "                                </p>\n",
        "\n",
@@ -871,6 +871,110 @@
        "                                </p>\n",
        "                                <p style=\"color: #888; text-align: right; position: absolute; bottom: 10px; right: 10px; font-family: 'Roboto', sans-serif; font-size: 13px;\">\n",
        "                                    ~ Negi Haruba\n",
+       "                                </p>\n",
+       "                            </div>\n",
+       "                        </div>\n",
+       "                    </div>\n",
+       "                </div>\n",
+       "            </div>\n",
+       "            \n",
+       "            <div id=\"book-5\" class=\"book-wrapper\" onclick=\"toggleFlip('book-5')\">\n",
+       "                <div class=\"book-3d-container\">\n",
+       "                    <div class=\"book-card\">\n",
+       "                        <div class=\"book-inner\">\n",
+       "                            <div class=\"book-front\" style=\"\n",
+       "                                background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)),\n",
+       "                                url('../_static/images/Ao Ashi.jpg') no-repeat center center;\n",
+       "                                background-size: cover;\n",
+       "                                border-left: 6px solid #2ecc71;\n",
+       "                                padding: 15px 20px;\n",
+       "                                \">\n",
+       "\n",
+       "                                <h3 style=\"margin-top: 0; font-family: 'Playfair Display', serif; font-size: 20px; color: #2c3e50;\">Ao Ashi</h3>\n",
+       "                                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Yugo Kobayashi</p>\n",
+       "                                <p style=\"margin: 4px 0; color : #585858;\">\n",
+       "                                    <strong>Status:</strong> <span style=\"color: #2ecc71; font-weight: bold;\">Available</span>\n",
+       "                                </p>\n",
+       "                                <div style=\"background-color: #e0e0e0; border-radius: 5px; height: 14px; width: 100%; margin-top: 10px;\">\n",
+       "                                    <div style=\"\n",
+       "                                        background-color: #2ecc71;\n",
+       "                                        height: 100%;\n",
+       "                                        border-radius: 5px;\n",
+       "                                        width: 100.0%;\n",
+       "                                        transition: width 0.3s;\n",
+       "                                    \"></div>\n",
+       "                                </div>\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
+       "                                    <strong>10 Copies</strong>\n",
+       "                                </p>\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
+       "                            </div>\n",
+       "                            <div class=\"book-back\" style=\"\n",
+       "                                background-color: #fdfdfd;\n",
+       "                                border-left: 6px solid #2ecc71;\n",
+       "                                \">\n",
+       "                                <h3 style=\"margin-top: 0; font-family: 'Playfair Display', serif; color: #2c3e50;\">Ao Ashi</h3>\n",
+       "                                <p style=\"color: #444;\"><strong>Description:</strong></p>\n",
+       "                                <p style=\"color: #555; font-size: 0.95em; line-height: 1.4em;\">\n",
+       "                                    Ashito Aoi, a young football player, dreams of becoming a professional player and joins a prestigious youth team.\n",
+       "                                </p>\n",
+       "                                <p style=\"color: #888; text-align: right; position: absolute; bottom: 10px; right: 10px; font-family: 'Roboto', sans-serif; font-size: 13px;\">\n",
+       "                                    ~ Yugo Kobayashi\n",
+       "                                </p>\n",
+       "                            </div>\n",
+       "                        </div>\n",
+       "                    </div>\n",
+       "                </div>\n",
+       "            </div>\n",
+       "            \n",
+       "            <div id=\"book-6\" class=\"book-wrapper\" onclick=\"toggleFlip('book-6')\">\n",
+       "                <div class=\"book-3d-container\">\n",
+       "                    <div class=\"book-card\">\n",
+       "                        <div class=\"book-inner\">\n",
+       "                            <div class=\"book-front\" style=\"\n",
+       "                                background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.75)),\n",
+       "                                url('../_static/images/Yofukashi no Uta.jpg') no-repeat center center;\n",
+       "                                background-size: cover;\n",
+       "                                border-left: 6px solid #2ecc71;\n",
+       "                                padding: 15px 20px;\n",
+       "                                \">\n",
+       "\n",
+       "                                <h3 style=\"margin-top: 0; font-family: 'Playfair Display', serif; font-size: 20px; color: #2c3e50;\">Yofukashi no Uta</h3>\n",
+       "                                <p style=\"margin: 4px 0; color : #585858;\"><strong>Author:</strong> Kotoyama</p>\n",
+       "                                <p style=\"margin: 4px 0; color : #585858;\">\n",
+       "                                    <strong>Status:</strong> <span style=\"color: #2ecc71; font-weight: bold;\">Available</span>\n",
+       "                                </p>\n",
+       "                                <div style=\"background-color: #e0e0e0; border-radius: 5px; height: 14px; width: 100%; margin-top: 10px;\">\n",
+       "                                    <div style=\"\n",
+       "                                        background-color: #2ecc71;\n",
+       "                                        height: 100%;\n",
+       "                                        border-radius: 5px;\n",
+       "                                        width: 70.0%;\n",
+       "                                        transition: width 0.3s;\n",
+       "                                    \"></div>\n",
+       "                                </div>\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; margin-top: 6px;\">\n",
+       "                                    <strong>7 Copies</strong>\n",
+       "                                </p>\n",
+       "                                <p style=\"text-align: right; font-size: 0.9em; color: #555; position: absolute; bottom: 25px; left: 50%; transform: translateX(-50%);\">     \n",
+       "                                    <strong>Click to see more</strong>\n",
+       "                                </p>\n",
+       "\n",
+       "                            </div>\n",
+       "                            <div class=\"book-back\" style=\"\n",
+       "                                background-color: #fdfdfd;\n",
+       "                                border-left: 6px solid #2ecc71;\n",
+       "                                \">\n",
+       "                                <h3 style=\"margin-top: 0; font-family: 'Playfair Display', serif; color: #2c3e50;\">Yofukashi no Uta</h3>\n",
+       "                                <p style=\"color: #444;\"><strong>Description:</strong></p>\n",
+       "                                <p style=\"color: #555; font-size: 0.95em; line-height: 1.4em;\">\n",
+       "                                    Kou, a sleepless teenager, wanders the city at night and meets Nazuna, a mysterious vampire girl — leading him into a nocturnal world of freedom, desire, and the allure of the night.\n",
+       "                                </p>\n",
+       "                                <p style=\"color: #888; text-align: right; position: absolute; bottom: 10px; right: 10px; font-family: 'Roboto', sans-serif; font-size: 13px;\">\n",
+       "                                    ~ Kotoyama\n",
        "                                </p>\n",
        "                            </div>\n",
        "                        </div>\n",
@@ -900,7 +1004,7 @@
     "        <style>\n",
     "            .book-wrapper {{\n",
     "                display: inline-block;\n",
-    "                margin: 15px;\n",
+    "                margin: 10px;\n",
     "                vertical-align: top;\n",
     "            }}\n",
     "            \n",
@@ -1018,7 +1122,7 @@
     "                                <h3 style=\"margin-top: 0; font-family: 'Playfair Display', serif; color: #2c3e50;\">{book['title']}</h3>\n",
     "                                <p style=\"color: #444;\"><strong>Description:</strong></p>\n",
     "                                <p style=\"color: #555; font-size: 0.95em; line-height: 1.4em;\">\n",
-    "                                    {book.get('description', 'No description available for this book.')}\n",
+    "                                    {book[\"description\"]}\n",
     "                                </p>\n",
     "                                <p style=\"color: #888; text-align: right; position: absolute; bottom: 10px; right: 10px; font-family: 'Roboto', sans-serif; font-size: 13px;\">\n",
     "                                    ~ {book['author']}\n",
